src/test/ui/issues/issue-30236.rs
type Foo<
    Unused //~ ERROR type parameter `Unused` is unused
    > = u8;

fn main() {

}
